fix overflow and scroll in tracklist and mainview

--- a/src/components/MainView/MainView.module.css
+++ b/src/components/MainView/MainView.module.css
@@ -14,4 +14,5 @@
     flex: 1;
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
